--- a/demo/recodify-sequence.conf
+++ b/demo/recodify-sequence.conf
@@ -1,3 +1,3 @@
 ./demo/artwork/rocket.txt pop blue:base
-./demo/artwork/recodify.txt pop cyan
-./demo/artwork/presents.txt pop white:base
+./demo/artwork/recodify.txt pop white:bright
+./demo/artwork/presents.txt pop black:bright
